# violet_sw

./: .gitignore  CLAUDE.md  README.md  start_all_bots.sh  start_all_bots_cmux.sh  test.py  unit_converter.html
005_money/: gui  (+60 more)
016_claude_rtl/: .gitattributes  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LOOPROMPT.md  README.md  install.sh  rust-toolchain.toml
016_claude_rtl/.github/workflows/: ci.yml
016_claude_rtl/crates/cli/: Cargo.toml
016_claude_rtl/crates/cli/src/: filelist.rs  lib.rs  main.rs  worklib.rs
016_claude_rtl/crates/cli/tests/: array_assign.rs  array_assign_pattern.rs  array_bounds.rs  array_methods.rs  array_of_packed.rs  array_param.rs  ascending_part_select.rs  assert_deferred.rs  assert_final.rs  assoc_key_spellings.rs  bare_event_ctrl.rs  bitvec_funcs.rs  block_local_array_init.rs  block_local_scope.rs  block_local_typedef_decl.rs  block_struct_var_shadow.rs  body_typedef_def.rs  break_continue.rs  casez_precision.rs  cast_expr.rs  cast_fill_width.rs  chained_typedef.rs  class_access_control.rs  class_cast.rs  class_crv.rs  class_field_shadow.rs  class_oop.rs  cli_ux.rs  clocking_foundation.rs  clocking_n4.rs  coverage_n5.rs  defparam.rs  dist_transcendental.rs  dotname_port.rs  dotstar_port.rs  dyn_frontend.rs  elab_err_cap.rs  enum_base_typedef.rs  enum_methods.rs  event_control.rs  (+148 more)
016_claude_rtl/crates/corpus-runner/: Cargo.toml
016_claude_rtl/crates/corpus-runner/src/: lib.rs
016_claude_rtl/crates/diag/: Cargo.toml
016_claude_rtl/crates/diag/src/: code.rs  event.rs  lib.rs  severity.rs
016_claude_rtl/crates/diag/tests/: bijection.rs
016_claude_rtl/crates/elaborate/: Cargo.toml
016_claude_rtl/crates/elaborate/src/: lib.rs  literal.rs  tests.rs
016_claude_rtl/crates/hdl-ast/: Cargo.toml
016_claude_rtl/crates/hdl-ast/src/: lib.rs
016_claude_rtl/crates/hdl-ast/tests/: schema_hash.rs
016_claude_rtl/crates/hdl-builtins/: Cargo.toml
016_claude_rtl/crates/hdl-builtins/src/: lib.rs
016_claude_rtl/crates/hdl-lexer/: Cargo.toml
016_claude_rtl/crates/hdl-lexer/src/: lib.rs
016_claude_rtl/crates/hdl-parser/: Cargo.toml
016_claude_rtl/crates/hdl-parser/src/: lib.rs
016_claude_rtl/crates/hdl-parser/tests/: depth_guard.rs  node_budget.rs
016_claude_rtl/crates/hdl-preprocess/: Cargo.toml
016_claude_rtl/crates/hdl-preprocess/src/: lib.rs
016_claude_rtl/crates/sim-engine/: Cargo.toml
016_claude_rtl/crates/sim-engine/src/: backend.rs  builtins.rs  eval.rs  exec.rs  lib.rs  native_eval.rs  rng.rs  sched.rs  state.rs  value.rs  vcd_thread.rs  width.rs  width_tests.rs
016_claude_rtl/crates/sim-engine/tests/: backend_equiv.rs  class_heap_cap.rs  const_domain_semantics.rs  corpus.rs  differential.rs  display_semantics.rs  dyn_storage.rs  end_to_end.rs  finish_flush.rs  fmt_cache.rs  fork_churn.rs  frame_call.rs  inbody_events.rs  legality_semantics.rs  libm_determinism.rs  logeq_word.rs  mw_div_hoist.rs  perf_baseline.rs  radix_variants.rs  run_diagnostics.rs  scope_m.rs  severity_tasks.rs  threads.rs  vm_arity.rs  waiter_pool_p2.rs  wide_value_semantics.rs
016_claude_rtl/crates/sim-ir/: Cargo.toml
016_claude_rtl/crates/sim-ir/src/: lib.rs
016_claude_rtl/crates/sim-ir/tests/: body_refs.rs  frozen_shapes.rs  m3_shapes.rs  no_float_usize.rs  no_serde_attrs.rs  reflection.rs  schema_hash.rs
016_claude_rtl/crates/testdata/: sim_ir_canonical.txt  sim_ir_registry.ron
016_claude_rtl/crates/vcd-diff/: Cargo.toml
016_claude_rtl/crates/vcd-diff/src/: lib.rs
016_claude_rtl/crates/vcd-writer/: Cargo.toml
016_claude_rtl/crates/vcd-writer/src/: lib.rs
016_claude_rtl/crates/vita-artifact/: Cargo.toml
016_claude_rtl/crates/vita-artifact-derive/: Cargo.toml
016_claude_rtl/crates/vita-artifact-derive/src/: lib.rs
016_claude_rtl/crates/vita-artifact-derive/tests/: render.rs
016_claude_rtl/crates/vita-artifact/src/: gate.rs  header.rs  lib.rs
016_claude_rtl/crates/vita-artifact/tests/: gate.rs  roundtrip.rs  vu_roundtrip.rs
016_claude_rtl/crates/vita-log/: Cargo.toml
016_claude_rtl/crates/vita-log/src/: lib.rs
016_claude_rtl/crates/vita-schema/: Cargo.toml
016_claude_rtl/crates/vita-schema/src/: lib.rs
016_claude_rtl/crates/vita-schema/tests/: registry.rs
016_claude_rtl/docs/: DEVLOG.md  REMAINING_WORK.md  ROADMAP.md
016_claude_rtl/docs/manual/: 000_introduction.md  001_installation.md  002_quickstart.md  003_language-reference.md  004_cli-reference.md  005_system-tasks.md  006_limitations.md  007_error-codes.md
016_claude_rtl/docs/preview/: 00-overview.md  01-goals-and-scope.md  02-implementation-language.md  03-build-and-portability.md  04-architecture.md  05-strategy-and-roadmap.md  06-simulation-engine.md  07-vcd-format.md  08-timescale-and-timing.md  09-testing-and-verification.md  10-glossary.md  11-sources-and-citations.md  12-research-methodology.md  13-diagnostics-and-logging.md  14-staged-artifacts.md  15-error-code-reference.md  16-schema-hash-spec.md  17-sim-ir-ir-backbone-freeze.md  18-acceleration-analysis.md  19-ai-agent-observability.md
016_claude_rtl/docs/preview/hdl-reference/: 00-standards-map.md  01-synthesizability-legend.md  README.md
016_claude_rtl/docs/preview/research-log/: README.md  eda-architectures-2026-05-28.md  hdl-standards-versions-2026-05-28.md  iverilog-verilator-behaviors-2026-05-28.md  rust-hdl-ecosystem-2026-05-28.md  sv-interfaces-packages-classes-2026-05-28.md  sv-scheduling-2026-05-28.md  sv-sva-synthesis-2026-05-28.md  sv-types-arrays-procedural-2026-05-28.md  system-tasks-conversion-math-2026-05-28.md  system-tasks-display-time-2026-05-28.md  system-tasks-introspection-misc-2026-05-28.md  system-tasks-io-memory-2026-05-28.md  system-tasks-random-assertion-2026-05-28.md  timescale-precision-2026-05-28.md  vcd-format-2026-05-28.md  verilog-lexical-types-expr-2026-05-28.md  verilog-modules-behavioral-2026-05-28.md  verilog-synthesizability-2026-05-28.md  (+4 more)
016_claude_rtl/docs/reviews/: 2026-07-02-ai-sim-observability.md
016_claude_rtl/examples/: 000_counter.sv  001_alu.sv  002_traffic_fsm.sv  003_shift_register.sv  README.md
(+1146 files in other folders)
